# csl26

./: .gitignore  .gitmodules  .release-plz.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DISAMBIGUATION_IMPLEMENTATION_PLAN.md  GEMINI.md  GEMINI_STATE.json  PLAN.md  README.md  TASK_LIST_RESUME.md  agentic.md  chicago.yaml  critique.md  csln-first.yaml  csln-new.yaml  csln.yaml  elsevier_full.txt  output.json  package-lock.json  refactor_plan.md  springer-basic-author-date.yaml  temp_2levels.csl  temp_test.csl  test.yaml
.agent/: AGENTS.md  PERSONAS.md  PRIOR_ART.md  STYLE_EDITOR_VISION.md  STYLE_TEST_RESULTS.md  state.json
.beans/: csl26-06vm--migrate-apa.md  csl26-0s2b--fix-bibliography-separator-bug-for-author-suffix-c.md  csl26-1p1o--name-formatting-system.md  csl26-25v6--integrate-template-sources-with-options-pipeline.md  csl26-29ti--phase-3-name-expansion-et-al-disambiguation.md  csl26-2wk4--phase-1-wire-disambiguator-into-processor.md  csl26-3gw7--migrate-modern-language-association.md  csl26-4eyw--add-html-and-djot-output-modes.md  csl26-4rg8--editor-label-capitalization-eds-vs-eds.md  csl26-4sh4--migrate-taylor-and-francis-chicago-author-date.md  csl26-5axq--evaluate-icu-library-for-datetime-internationaliza.md  csl26-5l9j--create-style-authors-guide.md  csl26-5plq--implement-migration-variable-debugger.md  csl26-5qh6--restore-semantic-tagging-in-djothtml-output-modes.md  csl26-5t6s--note-citation-system.md  csl26-6bak--refactor-delimiter-handling-with-hybrid-enum-appro.md  csl26-6n3c--support-name-formatting-without-periods-in-initial.md  csl26-6whe--fix-year-positioning-for-numeric-styles.md  csl26-7yfp--finalize-delimiter-migration-strategy.md  csl26-93yh--typst-interactive-pdf-renderer.md  csl26-9a89--refine-bibliography-rendering-for-delimiter-and-fo.md  csl26-aicv--fix-volumeissue-ordering-for-numeric-styles.md  csl26-cih2--add-label-processing-mode.md  csl26-ctw8--csln-migrate-extract-strip-periods-from-csl-source.md  csl26-e6v4--create-test-data-generator-tool.md  csl26-euzd--interactive-html-renderer-with-cssjs.md  csl26-extg--support-external-bibliography-grouping.md  csl26-eyw1--migrate-american-mathematical-society-label.md  csl26-fccy--use-styleauthor-agent-as-optional-style-migration.md  csl26-fm9s--expand-test-data-coverage-to-20-items.md  csl26-gczk--achieve-95-component-coverage-in-migration.md  csl26-gidg--reach-90-oracle-match-rate.md  csl26-group--configurable-bibliography-grouping.md  csl26-h2b0--implement-disambiguation-integration.md  csl26-h7xz--document-template-inferrer-in-rendering-workflowmd.md  csl26-hbxx--oracle-normalizer-handle-html-wrapped-bibliography.md  csl26-heqm--top-10-parent-styles-at-100-fidelity.md  csl26-hz9n--developer-tooling.md  (+67 more)
.claude/: settings.json
crates/csl_tasks/: Cargo.toml  README.md  UX_IMPROVEMENTS.md
crates/csl_tasks/examples/: config.toml.example  task-example.md
crates/csl_tasks/src/: archive.rs  cli.rs  config.rs  drift.rs  error.rs  github.rs  graph.rs  main.rs  migration.rs  storage.rs  task.rs  validation.rs
crates/csln/: CHANGELOG.md  Cargo.toml
crates/csln/crates/csln/generated_schemas/: style.json
crates/csln/generated_schemas/: style.json
crates/csln/src/: main.rs
crates/csln_analyze/: CHANGELOG.md  Cargo.toml
crates/csln_analyze/src/: batch_test.rs  main.rs  ranker.rs
crates/csln_core/: CHANGELOG.md  Cargo.toml
crates/csln_core/benches/: formats.rs
crates/csln_core/src/: citation.rs  embedded.rs  grouping.rs  legacy.rs  lib.rs  locale.rs  macros.rs  options.rs  presets.rs  reference.rs  renderer.rs  template.rs
crates/csln_core/src/embedded/: apa.rs  chicago.rs  harvard.rs  ieee.rs  mod.rs  numeric.rs  styles.rs  vancouver.rs
crates/csln_core/src/locale/: mod.rs  raw.rs  types.rs
crates/csln_core/src/options/: bibliography.rs  contributors.rs  dates.rs  localization.rs  mod.rs  multilingual.rs  processing.rs  substitute.rs  titles.rs
crates/csln_core/src/reference/: contributor.rs  conversion.rs  date.rs  mod.rs  tests.rs  types.rs
crates/csln_core/tests/: json_deserialization.rs  parent_reference.rs  verify_examples.rs
crates/csln_edtf/: CHANGELOG.md  Cargo.toml
crates/csln_migrate/: CHANGELOG.md  Cargo.toml  README.md
crates/csln_migrate/src/: compressor.rs  lib.rs  main.rs  options_extractor.rs  preset_detector.rs  template_compiler.rs  template_resolver.rs  upsampler.rs
crates/csln_migrate/src/analysis/: bibliography.rs  citation.rs
crates/csln_migrate/src/options_extractor/: bibliography.rs  contributors.rs  dates.rs  mod.rs  numbers.rs  processing.rs  tests.rs  titles.rs
crates/csln_migrate/src/passes/: deduplicate.rs  grouping.rs  reorder.rs
crates/csln_migrate/src/template_compiler/: dates.rs  group.rs  mod.rs  names.rs  tests.rs  text.rs
crates/csln_migrate/tests/: date_inference.rs  substitute_extraction.rs  term_mapping.rs
crates/csln_processor/: CHANGELOG.md  Cargo.toml  README.md
crates/csln_processor/benches/: rendering.rs
crates/csln_processor/src/: ffi.rs  io.rs  lib.rs  main.rs  processor.rs  reference.rs  render.rs  values.rs
crates/csln_processor/src/grouping/: mod.rs  selector.rs  sorting.rs
crates/csln_processor/src/processor/: disambiguation.rs  document.rs  labels.rs  matching.rs  mod.rs  rendering.rs  sorting.rs  tests.rs
crates/csln_processor/src/processor/document/: djot.rs  mod.rs  tests.rs
crates/csln_processor/src/render/: bibliography.rs  citation.rs  component.rs  djot.rs  format.rs  html.rs  latex.rs  mod.rs  plain.rs  test_formats.rs
crates/csln_processor/src/values/: contributor.rs  date.rs  list.rs  mod.rs  number.rs  term.rs  tests.rs  title.rs  variable.rs
crates/csln_processor/tests/: bibliography.rs  citations.rs  date_rendering.rs  disambiguation.rs  disambiguation_csl.rs  disambiguation_native.rs  document.rs  document_html_processing.rs  domain_fixtures.rs  i18n.rs  metadata.rs  multilingual_rendering.rs  multilingual_resolution.rs  name_rendering.rs  numeric_styles.rs  oracle_comparison.rs  sorting.rs  subsequent_author_substitute.rs
crates/csln_processor/tests/common/: mod.rs
(+314 files in other folders)
