[workspace]
members = [
    "crates/csl_legacy",
    "crates/csln_core",
    "crates/csln_migrate",
    "crates/csln_processor",
    "crates/csln_analyze",
    "crates/csln",
    "crates/csln_edtf"
]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"

[workspace.lints.rust]
unsafe_code = "warn"

[profile.release]
opt-level = 3
lto = "thin"        # Faster than "true", almost as good
strip = true
panic = "abort"
