[package]
name = "csl-tasks"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
gray_matter = "0.2"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
octocrab = "0.38"
colored = "2.1"
tabled = "0.17"

[lints]
workspace = true
