[package]
name = "csln_analyze"
version.workspace = true
edition.workspace = true
license = "MPL-2.0"
description = "Analyze CSL 1.0 styles to guide migration development"

[[bin]]
name = "csln-analyze"
path = "src/main.rs"

[[bin]]
name = "csln-batch-test"
path = "src/batch_test.rs"

[dependencies]
csl_legacy = { path = "../csl_legacy" }
csln_core = { path = "../csln_core" }
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2.4"
