[package]
name = "csln_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = { version = "0.8", features = ["derive", "url"] }
edtf = "0.2"
url = { version = "2.5", features = ["serde"] }
biblatex = "0.11"
csl_legacy = { path = "../csl_legacy" }
