[package]
name = "csln_core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_cbor = "0.11"
schemars = { version = "0.8", features = ["derive", "url"], optional = true }
csln_edtf = { path = "../csln_edtf", features = ["serde"] }
url = { version = "2.5", features = ["serde"] }
biblatex = "0.11"
csl_legacy = { path = "../csl_legacy" }

[features]
default = []
schema = ["dep:schemars"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "formats"
harness = false
