[package]
name = "csln_migrate"
version.workspace = true
edition.workspace = true

[[bin]]
name = "csln-migrate"
path = "src/main.rs"

[dependencies]
csl_legacy = { path = "../csl_legacy" }
csln_core = { path = "../csln_core" }
indexmap = "2.13.0"
roxmltree = "0.20"
serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
