[package]
name = "csln_processor"
authors = ["Bruce D'Arcus <bdarcus@gmail.com>"]
license = "MPL-2.0"
version = "0.1.0"
edition = "2021"
description = "CSLN citation and bibliography processor"

[lib]
name = "csln_processor"

[dependencies]
csln_core = { path = "../csln_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
edtf = { version = "0.2.0", features = ["chrono"] }

[dev-dependencies]
serde_yaml = "0.9"

[lints]
workspace = true
