[package]
name = "csln_processor"
authors = ["Bruce D'Arcus <bdarcus@gmail.com>"]
license = "MPL-2.0"
version = "0.1.0"
edition = "2021"
description = "CSLN citation and bibliography processor"

[lib]
name = "csln_processor"

[[bin]]
name = "csln-processor"
path = "src/main.rs"

[dependencies]
csln_core = { path = "../csln_core" }
csl_legacy = { path = "../csl_legacy" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
edtf = { version = "0.2.0", features = ["chrono"] }
biblatex = "0.10"
indexmap = "2.13.0"

[lints]
workspace = true
