[package]
name = "csln_processor"
authors = ["Bruce D'Arcus <bdarcus@gmail.com>"]
license = "MPL-2.0"
version = "0.1.0"
edition = "2021"
description = "CSLN citation and bibliography processor"

[lib]
name = "csln_processor"

[dependencies]
csln_core = { path = "../csln_core" }
csl_legacy = { path = "../csl_legacy" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_cbor = "0.11"
thiserror = "2.0"
csln_edtf = { path = "../csln_edtf", features = ["serde"] }
biblatex = "0.11"
indexmap = { version = "2.2.6", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
winnow = "0.7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "rendering"
harness = false

[lints]
workspace = true
